Widget - My Activity - add listener for pdf & video annotation add/delete, link add/delete

--- a/modules/applications/my-course/config.json
+++ b/modules/applications/my-course/config.json
@@ -2,7 +2,7 @@
   "name": "My Courses",
   "widgets":[
     {
-      "name": "My PDF Activity Widget",
+      "name": "My PDF Activity",
       "location": "user-profile",
       "description": "Show your reading PDF list contains the file information and link to resume your reading progress",
       "entryPoint": "/my-course/my-pdf-status",
@@ -12,7 +12,7 @@
       "icon":"/img/appPlaceholder.png"
     },
     {
-      "name": "My Video Activity Widget",
+      "name": "My Video Activity",
       "location": "user-profile",
       "description": "Show your video list contains the file information and the link to resume your video learning progress",
       "entryPoint": "/my-course/my-video-status",
@@ -24,7 +24,7 @@
     {
       "name": "My Activity in Created Courses",
       "location": "user-profile",
-      "description": "Show the list from courses you created, including the statistics of your activities for each node in the courses you created",
+      "description": "Show your created courses list, including the statistics of your activities for each node in the courses that you created",
       "entryPoint": "/my-course/my-created-courses",
       "widgetJavascript": ["my-created-courses.js"],
       "width": 5,
@@ -34,7 +34,7 @@
     {
       "name": "My Activity in Enrolled Courses",
       "location": "user-profile",
-      "description": "Show the list from courses you enrolled, including the statistics of your activities for each node in the courses you enrolled",
+      "description": "Show your enrolled courses list, including the statistics of your activities for each node in the courses that you have enrolled",
       "entryPoint": "/my-course/my-courses-breakdown",
       "widgetJavascript": ["my-courses-breakdown.js"],
       "width": 5,
@@ -42,9 +42,9 @@
       "icon":"/img/appPlaceholder.png"
     },
     {
-      "name": "My Summary",
+      "name": "My Activity Summary",
       "location": "user-profile",
-      "description": "Show the summary of your activities",
+      "description": "Show the statistic summary of your activities",
       "entryPoint": "/my-course/my-activity-summary",
       "widgetJavascript": ["my-activity-summary.js"],
       "width": 7,
