--- a/bower.json
+++ b/bower.json
@@ -52,7 +52,8 @@
     "oclazyload": "~1.0.9",
     "videogular-vimeo": "^0.1.0",
     "highcharts-ng": "^0.0.11",
-    "highcharts": "^4.2.4"
+    "highcharts": "^4.2.4",
+    "angular-relative-date": "^2.0.0"
   },
   "devDependencies": {
     "livereload-js": "^2.2.1"
