--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "app-root-path": "^1.0.0",
     "async-foreach": "^0.1.3",
     "asyncawait": "^1.0.1",
+    "bluebird": "^3.3.5",
     "body-parser": "~1.14.0",
     "bower": "^1.4.1",
     "config": "^1.12.0",
