--- a/bower.json
+++ b/bower.json
@@ -53,7 +53,8 @@
     "videogular-vimeo": "^0.1.0",
     "highcharts-ng": "^0.0.11",
     "highcharts": "^4.2.4",
-    "angular-relative-date": "^2.0.0"
+    "angular-relative-date": "^2.0.0",
+    "angular-daterangepicker": "^0.2.2"
   },
   "devDependencies": {
     "livereload-js": "^2.2.1"
