--- a/package.json
+++ b/package.json
@@ -23,17 +23,24 @@
     "ejs": "~2.3.1",
     "express": "~4.13.3",
     "express-session": "^1.10.4",
+    "favicon": "0.0.2",
     "flash": "^1.1.0",
+    "follow-redirects": "^1.2.0",
     "fs-extra": "^0.24.0",
     "gravatar": "^1.3.1",
     "gulp": "^3.9.0",
+    "html-to-json": "^0.6.0",
+    "is-image-url": "^1.1.8",
     "lodash": "^3.10.1",
+    "meta-tags": "^1.0.0",
+    "metatags": "0.0.8",
     "moment": "^2.10.2",
     "mongoose": "^4.0.7",
     "morgan": "~1.6.1",
     "node-uuid": "^1.4.3",
     "nodemailer": "^2.0.0",
     "oauth2orize": "^1.2.0",
+    "og-parser": "^1.0.5",
     "passport": "^0.3.0",
     "passport-custom": "^1.0.5",
     "passport-facebook": "^2.0.0",
@@ -45,7 +52,10 @@
     "shortid": "^2.2.2",
     "slug": "^0.9.1",
     "socket.io": "^1.3.5",
+    "string": "^3.3.3",
     "underscore": "^1.8.3",
+    "url-parse": "^1.1.7",
+    "valid-url": "^1.0.9",
     "validator": "^4.0.5",
     "x-frame-options": "^1.0.0"
   },
