--- a/bower.json
+++ b/bower.json
@@ -54,10 +54,12 @@
     "highcharts-ng": "^0.0.11",
     "highcharts": "^4.2.4",
     "angular-relative-date": "^2.0.0",
-    "angular-daterangepicker": "^0.2.2"
+    "angular-daterangepicker": "^0.2.2",
+    "angular-bootstrap": "^2.3.1"
   },
   "devDependencies": {
-    "livereload-js": "^2.2.1"
+    "livereload-js": "^2.2.1",
+    "angular-bootstrap": "^2.3.1"
   },
   "resolutions": {
     "angular": "~1.5.5",
