--- a/bower.json
+++ b/bower.json
@@ -55,7 +55,8 @@
     "highcharts": "^4.2.4",
     "angular-relative-date": "^2.0.0",
     "angular-daterangepicker": "^0.2.2",
-    "angular-bootstrap": "^2.3.1"
+    "angular-bootstrap": "^2.3.1",
+    "angular-ui-switch": "^0.1.1"
   },
   "devDependencies": {
     "livereload-js": "^2.2.1",
