--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "connect-mongo": "^0.8.0",
     "connect-multiparty": "^2.0.0",
     "cookie-parser": "~1.4.0",
+    "cors": "^2.8.1",
     "debug": "~2.2.0",
     "ejs": "~2.3.1",
     "express": "~4.13.3",
