--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "tests"
   ],
   "dependencies": {
+    "https://raw.github.com/furf/jquery-ui-touch-punch/master/jquery.ui.touch-punch.min.js": "*",
     "angular": "~1.5.5",
     "angular-cookies": "~1.5.5",
     "angular-resource": "~1.5.5",
@@ -31,7 +32,6 @@
     "bootstrap-timepicker": "~0.5.1",
     "jquery": "~2.1.4",
     "jquery-ui": "~1.11.4",
-    "jquery-ui-touch-punch": "*",
     "lodash": "~3.10.0",
     "quill": "^0.20.1",
     "videogular": "~1.3.2",
@@ -66,6 +66,8 @@
     "angular": "~1.5.5",
     "videogular": "^1.2.8",
     "bootstrap": "~3.3.5",
-    "jquery": ">= 1.9.0"
+    "jquery": ">= 1.9.0",
+    "lodash": ">= 4.14.2",
+    "jquery-ui": ">= 1.12.0"
   }
 }
