--- a/.k8s/web/deployment.yaml
+++ b/.k8s/web/deployment.yaml
@@ -16,6 +16,10 @@ spec:
       labels:
         component: web
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
       initContainers:
       - name: wait-for-mongodb
         image: mongo
