--- a/.k8s/prod/kustomization.yaml
+++ b/.k8s/prod/kustomization.yaml
@@ -1,15 +1,18 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+bases:
+- ../base
+
 namespace:  sc
 namePrefix: soco-
-
-bases:
-- .k8s
 
 commonLabels:
   owner: sc
   stage: prod
-
 commonAnnotations:
   contact: "Ralf Berger <ralf.berger@uni-due.de>"
+
+images:
+- name: inko/course-mapper
+  newTag: master
